test/JDBC/expected/BABEL-3201-vu-verify.out
DBCC CHECKIDENT(babel_3201_t_int, NORESEED);
GO

-- same as DBCC CHECKIDENT(<table_name>, RESEED), identity value is not changed
-- if current identity value for a table is less than the maximum identity value
-- stored in the identity column
DBCC CHECKIDENT(babel_3201_t_int);
GO


DBCC CHECKIDENT(babel_3201_t_int, RESEED);
GO

INSERT INTO babel_3201_t_int VALUES (8);
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_int;
GO
~~START~~
int#!#int
1#!#5
2#!#6
3#!#7
4#!#8
~~END~~


DBCC CHECKIDENT(babel_3201_sch1.babel_3201_t2);
GO

-- Set identity value to 5 which is less than the maximum value of the identity
-- column, using RESEED option in this case should will reset the identity value
-- to maximum value of the identity column. Value inserted in next insert will
-- be (max_identity_col_value + increment).
DBCC CHECKIDENT(babel_3201_t_bigint, RESEED, 3);
GO

INSERT INTO babel_3201_t_bigint VALUES (8);
GO
~~ROW COUNT: 1~~


SELECT * from babel_3201_t_bigint;
GO
~~START~~
bigint#!#int
3#!#5
6#!#6
9#!#6
6#!#8
~~END~~


DBCC CHECKIDENT(babel_3201_t_bigint, RESEED);
GO

INSERT INTO babel_3201_t_bigint VALUES (9);
GO
~~ROW COUNT: 1~~


SELECT * from babel_3201_t_bigint;
GO
~~START~~
bigint#!#int
3#!#5
6#!#6
9#!#6
6#!#8
12#!#9
~~END~~


-- no rows have been inserted in the table; both current identity value current
-- column value should be NULL (TO-DO)
DBCC CHECKIDENT(babel_3201_t1, NORESEED);
GO

DBCC CHECKIDENT(babel_3201_t1, RESEED);
GO

-- current identity value should be NULL (TO-DO), identity value inserted in
-- next INSERT operation should be new_reseed_value.
DBCC CHECKIDENT(babel_3201_t1, RESEED, 5);
GO

INSERT INTO babel_3201_t_int VALUES (5);
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_int;
GO
~~START~~
int#!#int
1#!#5
2#!#6
3#!#7
4#!#8
5#!#5
~~END~~


-- Remove all rows in table using TRUNCATE TABLE, identity value inserted in
-- next INSERT operation should be new_reseed_value.
TRUNCATE TABLE babel_3201_t_int;
GO

DBCC CHECKIDENT(babel_3201_t_int, RESEED, 10);
GO

INSERT INTO babel_3201_t_int VALUES (5);
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_int;
GO
~~START~~
int#!#int
10#!#5
~~END~~


-- Remove all rows in table using DELETE TABLE, identity value inserted in next
-- INSERT operation should be (new_reseed_value + increment).
DELETE FROM babel_3201_t_bigint;
GO
~~ROW COUNT: 5~~


DBCC CHECKIDENT(babel_3201_t_bigint, RESEED, 10);
GO

INSERT INTO babel_3201_t_bigint VALUES (5);
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_bigint;
GO
~~START~~
bigint#!#int
13#!#5
~~END~~


-- Incorrect DBCC command option
DBCC CHECKIDENT(babel_3201_t1) WITH NO_INFO;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'NO_INFO' is not a recognized option)~~


-- Invalid parameter 1
DBCC CHECKIDENT(5);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '5' at line 2 and character position 16)~~


DBCC CHECKIDENT(babel_3201_t_int, RESEED, ) WITH NO_INFOMSGS;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ')' at line 1 and character position 42)~~


-- Invalid keyword
DBCC CHECKIDENT(babel_3201_t1, RESEE);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'RESEE' at line 2 and character position 31)~~


-- Invalid datatype
DBCC CHECKIDENT(babel_3201_t1, RESEED, 1313abc);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'abc' at line 2 and character position 43)~~


-- Unsupported DBCC command
DBCC CHECKTABLE(babel_3201_t1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: DBCC CHECKTABLE is not yet supported in Babelfish)~~


-- Invalid DBCC command
DBCC FAKE_COMMAND(t1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Incorrect DBCC statement. Check the documentation for the correct DBCC syntax and options.)~~


-- Database undefined
DBCC CHECKIDENT(fake_db.dbo.babel_3201_t1, NORESEED);
GO
~~ERROR (Code: 911)~~

~~ERROR (Message: database "fake_db" does not exist)~~


-- Table undefined
DBCC CHECKIDENT(babel_3201_t1, RESEED);
GO

-- Schema undefined
DBCC CHECKIDENT(babel_3201_sch3.babel_3201_t1, NORESEED);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: schema "master_babel_3201_sch3" does not exist)~~


-- Table does not have identity column
DBCC CHECKIDENT(babel_3201_t2, RESEED);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'master_dbo.babel_3201_t2' does not contain an identity column.)~~


-- new_reseed_value as expression is not allowed
DBCC CHECKIDENT(babel_3201_t2, RESEED, 4+5);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '+' at line 2 and character position 40)~~


-- new_reseed_value is out of tinyint datatype range
DBCC CHECKIDENT(babel_3201_t_tinyint, RESEED, 256);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: setval: value 256 is out of bounds for sequence "babel_3201_t_tinyint_a_seq" (5..255))~~


DBCC CHECKIDENT(babel_3201_t_tinyint, RESEED, -1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: setval: value -1 is out of bounds for sequence "babel_3201_t_tinyint_a_seq" (5..255))~~


-- new_reseed_value is out of smallint datatype range
DBCC CHECKIDENT(babel_3201_t_smallint, RESEED, 32768);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: setval: value 32768 is out of bounds for sequence "babel_3201_t_smallint_a_seq" (10..32767))~~


DBCC CHECKIDENT(babel_3201_t_smallint, RESEED, -32769);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: setval: value -32769 is out of bounds for sequence "babel_3201_t_smallint_a_seq" (10..32767))~~



-- new_reseed_value is out of int datatype range
DBCC CHECKIDENT(babel_3201_t_int, RESEED, 2147483648);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: setval: value 2147483648 is out of bounds for sequence "babel_3201_t_int_a_seq" (1..2147483647))~~


DBCC CHECKIDENT(babel_3201_t_int, RESEED, -2147483649);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: setval: value -2147483649 is out of bounds for sequence "babel_3201_t_int_a_seq" (1..2147483647))~~


-- new_reseed_value is out of bigint datatype range
DBCC CHECKIDENT(babel_3201_t_bigint, RESEED, 9223372036854775808);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: value "9223372036854775808" is out of range for type bigint)~~


DBCC CHECKIDENT(babel_3201_t_bigint, RESEED, -9223372036854775809);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: value "-9223372036854775809" is out of range for type bigint)~~


-- numeric/decimal datatypes are internally converted to bigint, so allowed
-- range is same as that of bigint
DBCC CHECKIDENT(babel_3201_t_numeric, RESEED, 9223372036854775808);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: value "9223372036854775808" is out of range for type bigint)~~


-- When new_reseed_value is a float value, only value before the decimal is used
DBCC CHECKIDENT(babel_3201_t_decimal, RESEED, 15.65);
GO

INSERT INTO babel_3201_t_decimal VALUES (8);
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_decimal;
GO
~~START~~
bigint#!#int
7#!#5
10#!#6
13#!#7
18#!#8
~~END~~


begin tran;
DBCC CHECKIDENT(babel_3201_t_decimal, RESEED, 10);
INSERT INTO babel_3201_t_decimal VALUES (9);
commit;
go
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_decimal;
GO
~~START~~
bigint#!#int
7#!#5
10#!#6
13#!#7
18#!#8
13#!#9
~~END~~


BEGIN TRAN;
    DBCC CHECKIDENT(babel_3201_t_decimal, RESEED, 133ac);
    INSERT INTO babel_3201_t_decimal VALUES (10);
COMMIT;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'ac' at line 2 and character position 53)~~


SELECT * FROM babel_3201_t_decimal;
GO
~~START~~
bigint#!#int
7#!#5
10#!#6
13#!#7
18#!#8
13#!#9
~~END~~


BEGIN TRAN;
    DBCC CHECKIDENT(babel_3201_t_decimal, RESEED, 20);
    INSERT INTO babel_3201_t_decimal VALUES (11);
ROLLBACK;
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_decimal;
GO
~~START~~
bigint#!#int
7#!#5
10#!#6
13#!#7
18#!#8
13#!#9
~~END~~


EXEC babel_3201_proc1;
GO

INSERT INTO babel_3201_t_tinyint VALUES (10);
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_3201_t_tinyint;
GO
~~START~~
smallint#!#int
5#!#5
6#!#6
7#!#7
31#!#10
~~END~~


EXEC babel_3201_proc2;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: setval: value 257 is out of bounds for sequence "babel_3201_t_tinyint_a_seq" (5..255))~~

